--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>三国新传</title>
-  <big>三国新传</big>
+  <h2>三国新传</h2>
   <h3>作者：赖国宸</h3>
   <h3>创作时间：2022.04.07</h3>
   <h4>开始阅读：</h4><a href=page1.html>Go!</a>
