--- a/mulu.html
+++ b/mulu.html
@@ -7,6 +7,7 @@ h2 {font-size: 12px;color: #FFF; display : inline}
 h3 {font-size: 12px;color: #FFF; display : inline}
 h4 {font-size: 12px;color: #FFF; display : inline}
 h5 {font-size: 12px;color: #FFF; display : inline}
+a{ white-space:nowrap; }
 </style>
 <h2>目录</h2>
 <h3>1-张角领黄巾起义，刘关张桃园结义 1-2</h3><a href=page1.html>Go!</a>
