--- a/mulu.html
+++ b/mulu.html
@@ -2,9 +2,16 @@
 <style type="text/css">
 
 
-a{ white-space:nowrap; }
+
+h1 {font-size: 12px;color: #FFF; display : inline}
+h2 {font-size: 12px;color: #FFF; display : inline}
+h3 {font-size: 12px;color: #FFF; display : inline}
+h4 {font-size: 12px;color: #FFF; display : inline}
+h5 {font-size: 12px;color: #FFF; display : inline}
 </style>
 <h2>目录</h2>
 <h3>1-张角领黄巾起义，刘关张桃园结义 1-2</h3><a href=page1.html>Go!</a>
 <h3>2-董卓进京引大乱，刘备离幽投黄巾 3-6</h3><a href=page3.html>Go!</a>
-<h3>3-辩协合力平大乱，曹袁领军攻黄巾 7-17</h3>
+<h3>3-辩协合力平大乱，曹袁领军攻黄巾 7-17</h3><a href=page7.html>Go!</a>
+<h3>4-孙坚刘表闹不和，袁术亲自去劝和 18-20</h3><a href=page18.html>Go!</a>
+<h3>5-少帝驾崩立刘协，刘关张汝南重逢 21-22</h3><a href=page21.html>Go!</a>
