--- a/mulu.html
+++ b/mulu.html
@@ -7,3 +7,4 @@
 <h3>4-孙坚刘表闹不和，袁术亲自去劝和 18-20</h3><a href=page18.html>Go!</a>
 <h3>5-少帝驾崩立刘协，刘关张汝南重逢 21-22</h3><a href=page21.html>Go!</a>
 <h3>6-张加横从天而降，摇身一变成军师 23-32</h3><a href=page23.html>Go!</a>
+<h3>7-袁曹孙齐灭小侯，四国鼎立渐成型 33-36</h3><a href=page33.html>Go!</a>
