--- a/mulu.html
+++ b/mulu.html
@@ -8,3 +8,11 @@
 <h3>5-少帝驾崩立刘协，刘关张汝南重逢 21-22</h3><a href=page21.html>Go!</a>
 <h3>6-张加横从天而降，摇身一变成军师 23-32</h3><a href=page23.html>Go!</a>
 <h3>7-袁曹孙齐灭小侯，四国鼎立渐成型 33-36</h3><a href=page33.html>Go!</a>
+<h3>8-曹挟天子引公愤，庞诸出山助刘备 37-unknow</h3><a href=page37.html>Go!</a>
+<h3>9-献帝归西东汉无，曹操兵败退许昌 unknow-unknow</h3><a href=page.html>Go!</a>
+<h3>10-签条约天下暂平，刘玄德巧取南方 unknow-unknow</h3><a href=page.html>Go!</a>
+<h3>11-袁孙联手攻曹操，曹操又败势力寡 unknow-unknow</h3><a href=page.html>Go!</a>
+<h3>12-袁孙内讧孙策死，袁孙双双被曹灭 unknow-unknow</h3><a href=page.html>Go!</a>
+<h3>13-曹刘称帝蜀魏争，蜀国先败陈登无 unknow-unknow</h3><a href=page.html>Go!</a>
+<h3>14-刘玄德胜统中华，回师庆功加封官 unknow-unknow</h3><a href=page.html>Go!</a>
+<h3>15-张军师穿越回家，始编著《三国新传》 unknow-unknow</h3><a href=page.html>Go!</a>
