--- a/page1.html
+++ b/page1.html
@@ -8,9 +8,10 @@
 <body>
 <h2 align="center">张角领黄巾起义，刘关张桃园结义</h2>
 <p>东汉末年，在位的汉灵帝昏庸无能，宠爱宦官。张让等宦官贪赃枉法，压榨百姓。奸臣当权，自然灾害不断。山东一带干旱，江南却暴雨连绵￼￼￼，百姓处于水深火热之中。￼</p>
-<p>河北巨鹿有三兄弟：老大张角，30岁￼￼；老二张宝，28岁；老三张梁，只有25岁。他们见朝廷腐败，便苦读兵书。三年后，他们召集河北百姓，组成农民军。其他地方也纷纷起义，与张角汇合，人数共有20多万，声势十分浩大。张角被大家奉为首领，张角让农民军头上绑黄巾，因此叫“黄巾军”，这样一见黄巾就知道是自己人。￼</p>
-<p>幽州一带也有一位英雄在招兵买马，他￼叫刘备，字玄德。他身世凄苦￼￼￼￼，靠卖鞋为生。召集军士时，有两位大汉也来投奔。其中一位叫关羽，另一位叫张飞。他们三个聊得十分投机，结拜为兄弟，并去张飞的桃花园里发誓￼￼￼￼￼。刘备的军队也有一千余人￼，又得谋士陈登，实力也不小。</p>
+<p>河北巨鹿有三兄弟：老大张角，30岁；老二张宝，28岁；老三张梁，只有25岁。他们见朝廷腐败，便苦读兵书。三年后，他们召集河北百姓，组成农民军。其他地方也纷纷起义，与张角汇合，人数共有20多万，声势十分浩大。张角被大家奉为首领，张角让农民军头上绑黄巾，因此叫“黄巾军”，这样一见黄巾就知道是自己人。￼</p>
+<p>幽州一带也有一位英雄在招兵买马，他叫刘备，字玄德。他身世凄苦，靠卖鞋为生。召集军士时，有两位大汉也来投奔。其中一位叫关羽，另一位叫张飞。他们三个聊得十分投机，结拜为兄弟，并去张飞的桃花园里发誓￼￼￼￼￼。刘备的军队也有一千余人￼，又得谋士陈登，实力也不小。</p>
 <div style="position: absolute; bottom: 10px; right: 10px;">001</div>
+<div style="position: absolute; bottom: 10px; right: 10px;"><a href=page2.html>Next-></a></div>
 <a href=index.html>Home</a><p></p><a href=mulu.html>Contents</a>
 </body>
 </html>
